--- a/MyWebApi/appsettings.json
+++ b/MyWebApi/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "hangfiredb": "Data Source=.\\SQLEXPRESS;Initial Catalog=hangfire;Integrated Security=True;MultipleActiveResultSets=True"
+    "hangfiredb": "Data Source=.\\SQLEXPRESS;Initial Catalog=hangfire;Integrated Security=True;MultipleActiveResultSets=True",
+    "logicdb": "Data Source=.\\SQLEXPRESS;Initial Catalog=MyWebApi;Integrated Security=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "IncludeScopes": false,
